[package]
name = "tokenizers-c"
version = "0.13.2"
authors = ["Alex Tsao"]
edition = "2021"

[lib]
name = "tokenizers"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
libc = "0.2"
half = "*"
# packed_simd = { version = "0.3.8", package = "packed_simd_2" }

[dependencies.tokenizers]
version = "*"
path = "../../tokenizers"

[dev-dependencies]
tempfile = "3.1"
